# LR2_sedov

./: README.md  Седов отчет по ЛР2.docx
cpp/: CMakeLists.txt  main.cpp
ruby/: keyboard_tracker.rb
